파일에서 읽어서 parsing 하도록 추가

--- a/initial.html
+++ b/initial.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header>
-      <h1>DVBSTP packet 구조 </h1>
+      <h1>DVBSTP packet 구조 </h1> <h6>by aschoi@aircode.com</h6>
         <table>
             <th>0</th><th>1</th><th>2</th><th>3</th><th>4</th><th>5</th><th>6</th><th>7</th><th>8</th><th>9</th><th>A</th><th>B</th><th>C</th><th>D</th><th>E</th><th>F</th>    <th>0</th><th>1</th><th>2</th><th>3</th><th>4</th><th>5</th><th>6</th><th>7</th><th>8</th><th>9</th><th>A</th><th>B</th><th>C</th><th>D</th><th>E</th><th>F</th>
             <tr>
