--- a/CRID_parse/index.html
+++ b/CRID_parse/index.html
@@ -24,7 +24,7 @@
     </header>
 
     <div class="stream_input">
-        스트림파일 : <input type="file" id="crid_container_file_in" accept=".*" onchange="cri_file_changed();"/><span class="comment">Drag & Drop available.</span>
+        스트림파일 : <input class="drag_drop" type="file" id="crid_container_file_in" accept=".*" onchange="cri_file_changed();"/><span class="comment">Drag & Drop available.</span>
         <br/> 또는  <br/>
         텍스트로 입력 (16진수 DUMP): <br/>
         <textarea id="cri_packet" cols="80" rows="4" onchange="cri_from_text();"></textarea>
